# dicer

./: Cargo.toml  README.md
proptest-regressions/: program.txt
src/: annotations.rs  dice.rs  errors.rs  expressions.rs  main.rs  markdown_writer.rs  output.rs  pretty.rs  program.rs  spans.rs  values.rs
