[package]
name = "dicer"
version = "0.1.0"
edition = "2021"
authors = ["Eric Kidd <git@randomhacks.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
proptest = "1.0.0"

[dependencies]
anyhow = "1.0.57"
codespan-reporting = "0.11.1"
clap = { version = "3.2.5", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
peg = "0.8.0"
rand = "0.8.5"
thiserror = "1.0.31"
